tests/compile-fail/integration__integration__timelines__negative.snap
---
source: tests/integration/timelines.rs
expression: stderr
---
error: negative timeline indices are forbidden
  ┌─ <input>:3:8
  │
3 │ script -1 foo { }
  │        ^^

error: negative timeline indices are forbidden
  ┌─ <input>:4:8
  │
4 │ script -2 bar { }
  │        ^^


